GoalTracker/force-app/main/default/objects/Ideas_Settings__mdt/Ideas_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Global settings for Ideas</description>
    <label>Ideas Setting</label>
    <pluralLabel>Ideas Settings</pluralLabel>
</CustomObject>