GoalTracker/force-app/main/default/objects/Ideas_Settings__mdt/fields/Allow_Down_Voting__c.field-meta.xml
<CustomField>
    <fullName>Allow_Down_Voting__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allow users to downvote an idea</description>
    <inlineHelpText>Downvote an idea</inlineHelpText>
    <label>Allow Down Voting</label>
    <type>Checkbox</type>
</CustomField>