GoalTracker/force-app/main/default/objects/Ideas_Settings__mdt/fields/Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable debug mode for detailed console info</description>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>