GoalTracker/force-app/main/default/objects/Ideas_Settings__mdt/fields/PORTAL_ACCOUNT_ID__c.field-meta.xml
<CustomField>
    <fullName>PORTAL_ACCOUNT_ID__c</fullName>
    <defaultValue>&quot;abc&quot;</defaultValue>
    <description>PORTAL_ACCOUNT_ID is the account on which the contact will be created on and then enabled as a portal user.</description>
    <label>PORTAL ACCOUNT ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>